tests/snapshots/examples_fixtures/guide__arithmetic.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/arithmetic.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
