tests/snapshots/examples_fixtures/guide__array_builtins.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/array_builtins.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
