tests/snapshots/examples_fixtures/guide__array_hash_combo.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/array_hash_combo.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
