tests/snapshots/examples_fixtures/guide__array_iteration.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/array_iteration.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
