tests/snapshots/examples_fixtures/guide__arrays_basic.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/arrays_basic.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
