tests/snapshots/examples_fixtures/guide__bug_strings.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/bug_strings.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
