tests/snapshots/examples_fixtures/guide__comments.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/comments.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
