tests/snapshots/examples_fixtures/guide__comments_nested.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/comments_nested.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
