tests/snapshots/examples_fixtures/guide__comparison.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/comparison.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
