tests/snapshots/examples_fixtures/guide__complex_expr.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/complex_expr.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
