tests/snapshots/examples_fixtures/guide__contact_book.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/contact_book.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
