tests/snapshots/examples_fixtures/guide__diagnostic_comment_trim.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/diagnostic_comment_trim.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
